--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,26 @@
+body {
+    margin:0;
+  }
+header{
+    background-color: white;
+    width:100%;
+    height:auto;
+   
+}
+main{
+    background-image: url("../assets/achtergrond.jpg"); 
+    height: 100%;
+    aspect-ratio: 4/3;
+    background-repeat: no-repeat,repeat;
+    background-size: cover;
+    position: relative;
+}
+  
+  h1 {
+    text-align:center;
+    color: white;
+    position: relative;
+    background-color: black;
+    
 
+  }
