--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,11 +16,66 @@ main{
     position: relative;
 }
   
-  h1 {
+h1 {
     text-align:center;
     color: white;
     position: relative;
-    background-color: black;
-    
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.tab{
+  width:50em;
+  height:60em;
+  background-color: white;
+  margin-left: 17em;
+  margin-top: 5em;
+}
 
-  }
+.head1{
+  width: 99.5%;
+  height:5em;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+  border-bottom: 0px;
+  vertical-align: baseline;
+}
+.deel1{
+  width:99.5%;
+  height:9em;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+  border-bottom: 0px;
+}
+.deel2{
+  width:99.5%;
+  height:9em;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+  border-bottom: 0px;
+}
+.deel3{
+  width:99.5%;
+  height:9em;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+  border-bottom: 0px;
+}
+.deel4{
+  width:99.5%;
+  height:9em;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+  border-bottom: 0px;
+}
+.deel5{
+  width:99.5%;
+  height:9em;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+  border-bottom: 0px;
+}
+.deel6{
+  width:99.5%;
+  height:9em;
+  background-color: rgb(255, 255, 255);
+  border: 2px solid black;
+}
