--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,57 @@
 body {
     margin:0;
   }
+
+h1 {
+    text-align:center;
+    color: white;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.button1{
+  background-color: rgb(56, 255, 56);
+  border-radius: 15px;
+  padding: 10px;
+  display:inline-block;
+  font-size: large;
+  font-weight: 700;
+  border: 2px solid darkgreen;
+  margin-left: 10px;
+}
+
+.button2 img{
+  width: 3em;
+  height:3em;
+  background-color: white;
+}
+.button2{
+  background-color: white;
+  border: 0;
+}
+button:focus{
+  transform: scale(1.1);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+  transition: all .2s ease-in-out;
+}
+.zoek {
+  padding: 10px;
+  font-size: x-large;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+
+
+}
+
+.zoek img{
+  width:2em;
+  height:2em;
+  margin-left: 4em;
+
+}
+
+
 header{
     background-color: white;
     width:100%;
@@ -10,47 +61,46 @@ header{
 main{
     background-image: url("../assets/achtergrond.jpg"); 
     height: 100%;
-    aspect-ratio: 4/3;
+    width:100%;
+    /* aspect-ratio: 4/3; */
     background-repeat: no-repeat,repeat;
     background-size: cover;
     position: relative;
 }
   
-h1 {
-    text-align:center;
-    color: white;
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-.tab{
+
+.wit-midden-stuk{
   width:50em;
   height:60em;
   background-color: white;
-  margin-left: 17em;
-  margin-top: 5em;
+  margin: 0 auto;
 }
 
-.head1{
+.bovenste-balk{
   width: 99.5%;
   height:5em;
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
   border-bottom: 0px;
   vertical-align: baseline;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
 .deel1{
   width:99.5%;
   height:9em;
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
-  border-bottom: 0px;
+   border-bottom: 0px;
 }
 .deel2{
   width:99.5%;
   height:9em;
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
-  border-bottom: 0px;
+  border-bottom: 0px; 
 }
 .deel3{
   width:99.5%;
@@ -76,6 +126,6 @@ h1 {
 .deel6{
   width:99.5%;
   height:9em;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255); 
   border: 2px solid black;
 }
