--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,8 @@ h1 {
   font-weight: 700;
   border: 2px solid darkgreen;
   margin-left: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .button2 img{
@@ -30,23 +32,14 @@ h1 {
   border: 0;
 }
 button:focus{
-  transform: scale(1.1);
+  transform: scale(1.05);
   box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
   transition: all .2s ease-in-out;
 }
-.zoek {
-  padding: 10px;
-  font-size: x-large;
-  margin-right: 10px;
-  display: flex;
-  align-items: center;
-
-
-}
 
 .zoek img{
-  width:2em;
-  height:2em;
+  width:1.5em;
+  height:1.5em;
   margin-left: 4em;
 
 }
@@ -87,13 +80,31 @@ main{
   justify-content: space-between;
   align-items: center;
 }
+h2{
+  padding-left: 150px;
+  position: absolute;
+}
 
+p{
+  position: relative;
+  margin-top: 110px;
+  margin-left: 12px;
+}
 .deel1{
   width:99.5%;
   height:9em;
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
-   border-bottom: 0px;
+  border-bottom: 0px;
+  display: inline-flex;
+
+}
+.deel1 img{
+  width: 8em;
+  height: 8em;
+  align-items: center;
+  margin: 7.5px;
+  border-radius: 15px;
 }
 .deel2{
   width:99.5%;
@@ -101,6 +112,14 @@ main{
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
   border-bottom: 0px; 
+  display: inline-flex;
+}
+.deel2 img{
+  width: 8em;
+  height: 8em;
+  align-items: center;
+  margin: 7.5px;
+  border-radius: 15px;
 }
 .deel3{
   width:99.5%;
@@ -108,6 +127,14 @@ main{
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
   border-bottom: 0px;
+  display: inline-flex;
+}
+.deel3 img{
+  width: 8em;
+  height: 8em;
+  align-items: center;
+  margin: 7.5px;
+  border-radius: 15px;
 }
 .deel4{
   width:99.5%;
@@ -115,6 +142,14 @@ main{
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
   border-bottom: 0px;
+  display: inline-flex;
+}
+.deel4 img{
+  width: 8em;
+  height: 8em;
+  align-items: center;
+  margin: 7.5px;
+  border-radius: 15px;
 }
 .deel5{
   width:99.5%;
@@ -122,10 +157,26 @@ main{
   background-color: rgb(255, 255, 255);
   border: 2px solid black;
   border-bottom: 0px;
+  display: inline-flex;
+}
+.deel5 img{
+  width: 8em;
+  height: 8em;
+  align-items: center;
+  margin: 7.5px;
+  border-radius: 15px;
 }
 .deel6{
   width:99.5%;
   height:9em;
   background-color: rgb(255, 255, 255); 
   border: 2px solid black;
+  display: inline-flex;
+}
+.deel6 img{
+  width: 8em;
+  height: 8em;
+  align-items: center;
+  margin: 7.5px;
+  border-radius: 15px;
 }
