--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,22 +26,36 @@ h1 {
   width: 3em;
   height:3em;
   background-color: white;
+  margin-right: 10px;
+  margin-top: 10px;
 }
 .button2{
   background-color: white;
   border: 0;
 }
-button:focus{
-  transform: scale(1.05);
-  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
-  transition: all .2s ease-in-out;
+
+.button1:hover{
+  transform: scale(0.98);
+  border: 2px solid darkgreen;
+  background-color: white;
+
 }
 
 .zoek img{
   width:1.5em;
   height:1.5em;
-  margin-left: 4em;
+  margin-right: 10px;
+}
 
+form{
+  margin-bottom: 20px;
+  position: relative;
+}
+form img{
+  width:3em;
+  height:3em;
+  margin-right: 10px;
+  margin-top: 30px;
 }
 
 
@@ -55,7 +69,6 @@ main{
     background-image: url("../assets/achtergrond.jpg"); 
     height: 100%;
     width:100%;
-    /* aspect-ratio: 4/3; */
     background-repeat: no-repeat,repeat;
     background-size: cover;
     position: relative;
@@ -86,97 +99,41 @@ h2{
 }
 
 p{
-  position: relative;
+  position: absolute;
   margin-top: 110px;
-  margin-left: 12px;
+  margin-left: 150px;
 }
-.deel1{
+
+.deel{
+  background-color: rgb(255, 255, 255);
   width:99.5%;
   height:9em;
-  background-color: rgb(255, 255, 255);
   border: 2px solid black;
   border-bottom: 0px;
   display: inline-flex;
 
 }
-.deel1 img{
+
+.deel img{
   width: 8em;
   height: 8em;
   align-items: center;
   margin: 7.5px;
   border-radius: 15px;
+  z-index: 1000;
+  transition: 0.5s;
+  position: relative;
 }
-.deel2{
-  width:99.5%;
-  height:9em;
-  background-color: rgb(255, 255, 255);
-  border: 2px solid black;
-  border-bottom: 0px; 
-  display: inline-flex;
-}
-.deel2 img{
-  width: 8em;
-  height: 8em;
-  align-items: center;
-  margin: 7.5px;
-  border-radius: 15px;
-}
-.deel3{
-  width:99.5%;
-  height:9em;
-  background-color: rgb(255, 255, 255);
-  border: 2px solid black;
-  border-bottom: 0px;
-  display: inline-flex;
-}
-.deel3 img{
-  width: 8em;
-  height: 8em;
-  align-items: center;
-  margin: 7.5px;
-  border-radius: 15px;
-}
-.deel4{
-  width:99.5%;
-  height:9em;
-  background-color: rgb(255, 255, 255);
-  border: 2px solid black;
-  border-bottom: 0px;
-  display: inline-flex;
-}
-.deel4 img{
-  width: 8em;
-  height: 8em;
-  align-items: center;
-  margin: 7.5px;
-  border-radius: 15px;
-}
-.deel5{
-  width:99.5%;
-  height:9em;
-  background-color: rgb(255, 255, 255);
-  border: 2px solid black;
-  border-bottom: 0px;
-  display: inline-flex;
-}
-.deel5 img{
-  width: 8em;
-  height: 8em;
-  align-items: center;
-  margin: 7.5px;
-  border-radius: 15px;
+
+.deel:hover img{
+  transform: scale(2.0);
+  margin-left: 20em;
+  transition: 1.5s;
+  border-radius: 0%;
+  border:1px solid black;
+
 }
 .deel6{
-  width:99.5%;
-  height:9em;
-  background-color: rgb(255, 255, 255); 
-  border: 2px solid black;
-  display: inline-flex;
-}
-.deel6 img{
-  width: 8em;
-  height: 8em;
-  align-items: center;
-  margin: 7.5px;
-  border-radius: 15px;
+  border: 2px;
+  border-bottom: 2px solid black;
 }
