--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,13 +125,16 @@ p{
   position: relative;
 }
 
-.deel:hover img{
+.deel img:focus{
   transform: scale(2.0);
   margin-left: 20em;
   transition: 1.5s;
   border-radius: 0%;
   border:1px solid black;
-
+}
+.deel img:hover{
+  transform:scale(1.1);
+  transition:0.2s;
 }
 .deel6{
   border: 2px;
