--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ h1 {
   display:inline-block;
   font-size: large;
   font-weight: 700;
-  border: 2px solid darkgreen;
+  border: 2px solid rgb(76, 158, 76);
   margin-left: 7.5px;
   display: flex;
   align-items: center;
@@ -25,7 +25,7 @@ h1 {
 
 .button1:hover{
   transform: scale(0.98);
-  border: 2px solid darkgreen;
+  border: 2px solid rgb(76, 158, 76);
   background-color: white;
 }
 
@@ -33,7 +33,6 @@ h1 {
   width: 3em;
   height:3em;
   background-color: white;
-  margin-right: 10px;
   margin-top: 10px;
 }
 
@@ -43,7 +42,7 @@ h1 {
 }
 
 .button2:hover{
-  transform: scale(0.98);
+  transform: scale(0.95);
   background-color: white;
 }
 
