--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,47 @@
 body {
-    margin:0;
-  }
+  margin:0;
+}
+
+header{
+    background-color: white;
+    width:100%;
+    height:6em;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+.header-links{
+  display: flex;
+  align-items: center;
+}
+.logo img{
+  width: 15em;
+  height: auto;
+}
+
+.menu img{
+  width: 3em;
+  border: 0px solid white ;
+  margin-right: 1em;
+}
+
+
+.headerb{
+  padding: 1em;
+  text-decoration: none; 
+  font-size: larger;
+}
+
+.headerb:hover{
+  transform:scale(1.1);
+  transition:0.2s;
+}
+
+a{
+  color: #333568;
+  font-weight: bold;
+  font-size: 18px;
+}
 
 h1 {
     text-align:center;
@@ -8,40 +49,40 @@ h1 {
     position: relative;
     background-color: rgba(0, 0, 0, 0.8);
     font-family:'Times New Roman', Times, serif;
+    
 }
 
-.button1{
-  background-color: rgb(56, 255, 56);
+.post-button{
+  background-color: rgb(198, 255, 198);
   border-radius: 15px;
   padding: 10px;
   display:inline-block;
   font-size: large;
   font-weight: 700;
-  border: 2px solid rgb(76, 158, 76);
+  border: 1px solid rgba(240, 240, 240, 0.8);
   margin-left: 7.5px;
   display: flex;
   align-items: center;
 }
 
-.button1:hover{
-  transform: scale(0.98);
-  border: 2px solid rgb(76, 158, 76);
+.post-button:hover{
+  border: 2px solid #85c27a;
   background-color: white;
 }
 
-.button2 img{
+.zoek-button img{
   width: 3em;
   height:3em;
   background-color: white;
   margin-top: 10px;
 }
 
-.button2{
+.zoek-button{
   background-color: white;
   border-width: 0;
 }
 
-.button2:hover{
+.zoek-button:hover{
   transform: scale(0.95);
   background-color: white;
 }
@@ -52,7 +93,6 @@ h1 {
   height:3em;
   margin-right: 20px;
   margin-top: 5px;
-  
 }
 
 form{
@@ -67,18 +107,11 @@ form img{
 }
 
 
-header{
-    background-color: white;
-    width:100%;
-    height:auto;
-   
-}
 main{
     background-image: url("../assets/achtergrond.jpg"); 
     width:100%;
     height: auto;
     background-repeat: no-repeat,repeat;
-    /* background-size: cover; */
     position: absolute;
 }
   
@@ -149,4 +182,45 @@ p{
 .deel6{
   border: 2px;
   border-bottom: 2px solid black;
+}
+
+footer{
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  align-self: center;
+  border-top: 3px solid black;
+  
+}
+
+footer img{
+  margin-left: 1em;
+  width: 10em;
+}
+
+
+
+
+
+@media only screen and (max-width: 480px) {
+  header{
+    width: 100%;
+  }
+header img{
+  width: 10em;
+}
+
+  h1{
+    font-size: 10px;
+  }
+  
+  
+  .meerweten, .locatie, .contact{
+      display: none;
+  }
+  .menu{
+    size:50em;
+  }
+
+
+
 }
