--- a/styles/meer-weten.css
+++ b/styles/meer-weten.css
@@ -35,6 +35,10 @@ body {
   .headerb:hover{
     transform:scale(1.1);
     transition:0.2s;
+    color: #FE7221;
+  }
+  .meerweten{
+    color: #FE7221;
   }
   
   a{
@@ -51,4 +55,18 @@ body {
       font-family:'Times New Roman', Times, serif;
       
   }
-  
+  main{
+    background-image: url("../assets/achtergrond.jpg"); 
+    width:100%;
+    height: auto;
+    background-repeat: no-repeat,repeat;
+    position: absolute;
+}
+  .wit-midden-stuk{
+    width: 55em;
+    height: 40em;
+    background-color: rgb(255, 255, 255);
+    margin:0 auto;
+    box-shadow: 0 0 10px rgb(164, 255, 142);
+    box-shadow: 0 0 10px rgb(164, 255, 142);
+  }
